Fix duplicate icons #3636
-Using common icons from lib-admin-ui in the first place
-Removed all duplicated icons from icomoon-studio-lib (those overlapping with lib-admin-ui) and updated .ts classes to use common ones
-Left empty icomoon-studio-app fonts (since all required icons exist in icomoon-studio-lib) for future use
-Moved archive icon into icomoon-studio-lib and added box-remove icon as icon-box-remove for using in versions history

--- a/modules/app/src/main/resources/assets/icons/icons.less
+++ b/modules/app/src/main/resources/assets/icons/icons.less
@@ -1,170 +1,9 @@
 @font-face {
   font-family: 'icomoon-studio-app';
   src:
-    url('fonts/icomoon-studio-app.woff2') format('woff2'),
     url('fonts/icomoon-studio-app.woff') format('woff');
 }
 
-.icon {
+.icon-studio-app {
   .icon-mixin('icomoon-studio-app');
-}
-
-.icon-font-size {
-  .icon();
-
-  &::before {
-    content: "\ea62";
-  }
-}
-
-.icon-insert-template {
-  .icon();
-
-  &::before {
-    content: "\ea73";
-  }
-}
-
-.icon-layout {
-  .icon-insert-template;
-
-  &::before {
-    display: inline-block;
-    .rotate(90deg);
-  }
-}
-
-.icon-page-template {
-  .icon-insert-template;
-}
-
-.icon-fragment {
-  .icon-pie();
-}
-
-.icon-pie {
-  .icon();
-
-  &::before {
-    content: "\ea0a";
-  }
-}
-
-.icon-state-invalid {
-  .icon();
-
-  &:before {
-    color: #CB0300;
-    content: "\e905";
-    background-color: @admin-white;
-    border-radius: 20px;
-  }
-}
-
-.icon-state-in-progress {
-  .icon();
-
-  &:before {
-    color: #CBAD00;
-    content: "\e904";
-    background-color: @admin-white;
-    border-radius: 20px;
-  }
-}
-
-.icon-state-ready {
-  .icon();
-
-  &:before {
-    content: "\e907";
-    color: @admin-green;
-    background-color: @admin-white;
-    border-radius: 20px;
-  }
-}
-
-.icon-version-modified {
-  .icon();
-
-  &:before {
-    content: "\e908";
-  }
-}
-
-.icon-version-published {
-  .icon();
-
-  &:before {
-    content: "\e909";
-  }
-}
-
-.icon-version-unpublished {
-  .icon();
-
-  &:before {
-    content: "\e2c1";
-  }
-}
-
-.icon-publish-request {
-  .icon();
-
-  &:before {
-    content: "\e9a0";
-  }
-}
-
-.icon-issue {
-  .icon();
-
-  &:before {
-    content: "\e9a1";
-  }
-}
-
-.icon-publish-request,
-.icon-issue {
-  &.closed {
-    color: #777777;
-  }
-
-  &.opened {
-    color: #609E24;
-  }
-}
-
-.icon-compare {
-  .icon();
-
-  &:before {
-    content: "\e915";
-  }
-}
-
-.icon-tree-2 {
-  .icon();
-
-  &:before {
-    content: "\e978";
-  }
-}
-
-.icon-blocked {
-  .icon();
-
-  &:before {
-    content: "\ea0e";
-    color: @admin-red;
-    background-color: @admin-white;
-    border-radius: 20px;
-  }
-}
-
-.icon-layer {
-  .icon();
-
-  &:before {
-    content: "\e932";
-  }
 }
