--- a/modules/app/src/main/resources/assets/page-editor/styles/partials/page-view.less
+++ b/modules/app/src/main/resources/assets/page-editor/styles/partials/page-view.less
@@ -22,8 +22,7 @@
         position: relative;
 
         &:not(.empty) {
-          .icon-page-template;
-          &:before {
+          &::before {
             display: block;
             position: absolute;
             color: @placeholder-icon;
